--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!--   https://security-ias.github.io/XSS/ -->
 <html>
-
-Hi
+<body>
+<p id=ex > dummy</p>
+<script>
+    document.getElementById("ex").innerHTML="ok"
+</script>
+</body>
 </html>
