--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 <p id=ex > dummy</p>
 <script>
-    document.getElementById("ex").innerHTML="ok"
+    document.getElementById("ex").innerHTML="ok2"
 </script>
 </body>
 </html>
